# server/routes/auth/index.js
@@ -1,7 +1,9 @@
 const express = require('express');
-const login = require('./login');
+const {login, logout} = require('./login');
 const refresh = require('./refresh');
+const NaverAuth = require('./naverAuth');
 const kakaoAuth = require('./kakaoAuth');
+const GoogleAuth = require('./googleAuth');
 const authJWT = require('../../utils/authJWT');
 const passport = require("passport");
 
@@ -9,17 +11,13 @@ const router = express.Router();
 
 
 router.post('/login', login);
+router.get('/logout', authJWT, logout);
 router.get('/refresh', refresh);
 router.get("/kakao", passport.authenticate("kakao"));
 router.get("/kakao/callback", passport.authenticate("kakao", {failureRedirect: "/login"}), kakaoAuth);
-router.get("/logout", (req, res) => {
-    req.logout(function (err) {
-      if (err) {
-        console.error(err);
-        return res.redirect("/"); // 로그아웃 중 에러가 발생한 경우에 대한 처리
-      }
-       //로그아웃 성공 시 리다이렉트
-    });
-  });
+router.get('/naver', passport.authenticate('naver'));
+router.get('/naver/callback', passport.authenticate('naver', {failureRedirect: '/login',}), NaverAuth);
+router.get('/google', passport.authenticate('google', { scope: ["email", "profile"] }));
+router.get('/google/callback', passport.authenticate('google', {failureRedirect: '/login',}), GoogleAuth);
 
 module.exports = router;
