# server/utils/NaverStrategy.js
@@ -1,47 +1,46 @@
 const passport = require("passport");
-const KakaoStrategy = require("passport-kakao").Strategy;
+const NaverStrategy = require("passport-naver").Strategy;
 const jwt = require('../utils/jwt-util');
 const client = require('../client');
-// const { Users } = require("");
-
 
 module.exports = () => {
 
     passport.use(
-        new KakaoStrategy(
+        new NaverStrategy(
             {
-                clientID : process.env.KAKAO_CLIENT,
-                callbackURL : "/auth/kakao/callback"
-            },
-            async (accessToken, refreshToken, profile, done) => {
+                clientID: process.env.NAVER_CLIENT,
+                clientSecret: process.env.NAVER_SECRET,
+                callbackURL: '/auth/naver/callback',
+            }, 
+            async(accessToken, refreshToken, profile, done) => {
                 try {
                     const exUser = await client.users.findFirst({
-                        where : {
-                            email : profile._json.kakao_account.email,
-                            provider : "KAKAO"
-                        }
+                            where: { 
+                                email : profile.email,
+                                provider : "NAVER"
+                            },
                     });
-                    if(exUser){
+                    if(exUser) {
                         const accessToken = jwt.sign(exUser);
                         const refreshToken = jwt.refresh();
                         return done(null, {accessToken : accessToken, refreshToken : refreshToken});
-                    }else{
+                    } else {
                         const newUser = await client.users.create({
                             data : {
-                                email : profile._json.kakao_account.email,
+                                email: profile._json.email,
                                 username : profile.displayName,
-                                provider : "KAKAO"
+                                provider : "NAVER"
                             }
                         });
                         const accessToken = jwt.sign(newUser);
                         const refreshToken = jwt.refresh();
                         return done(null, {accessToken : accessToken, refreshToken : refreshToken});
                     }
-                } catch(err){
+                } catch(err) {
                     console.error(err);
                     done(err);
                 }
             }
         )
-    )
+    );
 }
